# outlier_correction

./: CMakeLists.txt  README.md
src/: correct_outlier.cpp  correct_outlier.h
test/: demo.cpp  demo_line_fitting.cpp  demo_signal_processing.cpp  input.csv  output.csv
